Makes the toggle work on phone(the menus is not showing up on desktop...) Working on a fix

--- a/src/mobilecss/button-filter.css
+++ b/src/mobilecss/button-filter.css
@@ -31,12 +31,11 @@
     justify-content: center;
     align-content: center;
     padding-bottom: 30px;
-
-  }
-
-  .filter-btn {
     display: block;
+
   }
+
+
 
 }
 
@@ -45,7 +44,8 @@
     display: none;
 
   }
-  .all-filter-container{
+
+  .all-filter-container {
     display: block;
   }
 
